After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693353 - Be more robust against unknown entry types
Be more robust against unknown entry types
Status: RESOLVED FIXED
Product: libzapojit
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: libzapojit maintainer(s)
libzapojit maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-02-07 19:06 UTC by Cosimo Cecchi
Modified: 2013-03-08 13:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Be more robust against unknown entry types (2.40 KB, patch)
2013-02-07 19:06 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2013-02-07 19:06:52 UTC
See attached patch
Comment 1 Cosimo Cecchi 2013-02-07 19:06:53 UTC
Created attachment 235439 [details] [review]
Be more robust against unknown entry types

Right now when an unknown entry type is encountered, we can end up
appending a NULL value in the middle of the entry list, which might
later result in a segfault in the client dereferencing NULL when
iterating the list.
Be more robust to that error, so that the returned entry list is always
composed of valid elements.

https://bugzilla.redhat.com/show_bug.cgi?id=872884
Comment 2 Debarshi Ray 2013-03-08 13:56:56 UTC
Comment on attachment 235439 [details] [review]
Be more robust against unknown entry types

Thanks for the patch.